@@ -440,6 +440,7 @@ All:
 - Don't crash when input is empty in wxFileConfig ctor (Lukasz Michalski).
 - Correct wxSocket::Peek() to not block (Anders Larsen).
 - Added IEC and SI units support to GetHumanReadableSize() (Julien Weinzorn).
+- Add convenient wxString::ToStd{String,Wstring}() helpers.
 
 Unix:
 
